[package]
name = "nom_stl"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[dependencies]
nom = "5.1"

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
