[package]
name = "nom_stl"
version = "0.2.1"
authors = ["Clark Kampfe <clark.kampfe@fastradius.com>", "Aaron Brenzel <aaron.brenzel@fastradius.com>"]
edition = "2018"
license = "MIT"
description = "A fast STL parser"
homepage = "https://github.com/fast-radius/nom_stl"
repository = "https://github.com/fast-radius/nom_stl"
documentation = "https://docs.rs/nom_stl/"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["stl", "parser", "mesh", "nom"]
exclude = [
    "fixtures/*"
]

[dependencies]
nom = "5.1"

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
